Remove unused JS and improve accessibility

--- a/content/work/13.css.md
+++ b/content/work/13.css.md
@@ -1,8 +1,8 @@
 ---
-title: 'css Website'
-description: 'css Website.'
+title: 'CSS Website'
+description: 'CSS Website.'
 image:
-  src: '/img/css.png'
+  src: '/img/CSS.png'
   alt: 'An image showcasing My Page.'
   width: 400
   height: 300
@@ -23,7 +23,7 @@ head:
 GitLink: https://github.com/
 ViewLink: https://jostpaino.github.io/Gotham/
 FrameworkIcon:  logos:react
-MdImage: '/img/css.png'
+MdImage: '/img/CSS.png'
 MdImageName: VueImage
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
 ProjTitle: Nuxt Portfolio Website
