add Links to Github and ToolsUsed section

--- a/content/work/0.Nuxtp.md
+++ b/content/work/0.Nuxtp.md
@@ -1,5 +1,5 @@
 ---
-title: 'Nuxtp Website'
+title: 'Mega-Portfolio'
 description: 'Nuxtp Website.'
 image:
   src: '/img/Nuxtp.png'
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://jostpaino.github.io/Gotham/
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/Nuxtp.png'
 MdImageName: VueImage
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
