--- a/content/work/0.Vue-Travel.md
+++ b/content/work/0.Vue-Travel.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://vue-router-weld.vercel.app/
-FrameworkIcon: logos:vue
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/VueTravel.png'
 MdImageName: Vue Portfolio
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
