--- a/content/work/1.react-GPT3.md
+++ b/content/work/1.react-GPT3.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://gpt-3-brown.vercel.app/
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/GPT3.png'
 MdImageName: GPT3 Website
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
