--- a/content/work/11.lets-travel.md
+++ b/content/work/11.lets-travel.md
@@ -21,8 +21,8 @@ head:
 ::ProjectPage
 ---
 GitLink: https://github.com/
-ViewLink: https://jostpaino.github.io/Gotham/
-FrameworkIcon:  logos:react
+ViewLink: https://jostpaino.github.io/LetsTravel/
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/letstravel.png'
 MdImageName: VueImage
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
