--- a/content/work/12.cnn.md
+++ b/content/work/12.cnn.md
@@ -1,5 +1,5 @@
 ---
-title: 'cnn Website'
+title: 'CNN'
 description: 'cnn Website.'
 image:
   src: '/img/cnn.png'
@@ -21,8 +21,8 @@ head:
 ::ProjectPage
 ---
 GitLink: https://github.com/
-ViewLink: https://jostpaino.github.io/Gotham/
-FrameworkIcon:  logos:react
+ViewLink: https://jostpaino.github.io/CNNclone/
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/cnn.png'
 MdImageName: VueImage
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
