--- a/content/work/13.css.md
+++ b/content/work/13.css.md
@@ -1,6 +1,6 @@
 ---
-title: 'CSS Website'
-description: 'CSS Website.'
+title: 'Block Manipulation'
+description: 'Portfolio project using es6+ javascript, html5 and CSS3 to move a block along a page.'
 image:
   src: '/img/CSS.png'
   alt: 'An image showcasing My Page.'
@@ -21,12 +21,12 @@ head:
 ::ProjectPage
 ---
 GitLink: https://github.com/
-ViewLink: https://jostpaino.github.io/Gotham/
-FrameworkIcon:  logos:react
+ViewLink: https://jostpaino.github.io/BlockManipulation/
 MdImage: '/img/CSS.png'
-MdImageName: VueImage
-ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
-ProjTitle: Nuxt Portfolio Website
+MdImageName: CSS transform Image
+ProjDesc: Portfolio project using es6+ javascript, html5 and CSS3 to move a block along a page.
+ProjTitle: Block Manipulation
+ToolsUsed: HTML, CSS3, and ES6+ JavaScript
 ---
 
 ::
