--- a/content/work/14.balloons.md
+++ b/content/work/14.balloons.md
@@ -1,6 +1,6 @@
 ---
-title: 'balloons Website'
-description: 'balloons Website.'
+title: 'Balloon Clicker Game'
+description: 'Portfolio project using Vanilla js, css and html to create a clicker game.'
 image:
   src: '/img/balloons.png'
   alt: 'An image showcasing My Page.'
@@ -9,24 +9,24 @@ image:
 head:
   meta:
     - name: 'keywords'
-      content: 'nuxt, vue, content'
+      content: 'html, css, javascript, dom manipulation, click events'
     - name: 'robots'
       content: 'index, follow'
     - name: 'author'
-      content: 'NuxtLabs'
+      content: 'JoshuaPaino'
     - name: 'copyright'
-      content: '© 2022 NuxtLabs'
+      content: '© 2023 Joshua Paino'
 ---
 
 ::ProjectPage
 ---
 GitLink: https://github.com/
-ViewLink: https://jostpaino.github.io/Gotham/
-FrameworkIcon:  logos:react
+ViewLink: https://jostpaino.github.io/Balloons/
 MdImage: '/img/balloons.png'
-MdImageName: VueImage
-ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
-ProjTitle: Nuxt Portfolio Website
+MdImageName: Balloons Game image
+ProjDesc: Portfolio project using Vanilla js, css and html to create a clicker game.
+ToolsUsed: HTML, CSS3, Vanilla Javascript, Dom manipulation, Click events
+ProjTitle: Balloons Clicker Game
 ---
 
 ::
