--- a/content/work/15.vue-css.md
+++ b/content/work/15.vue-css.md
@@ -1,6 +1,6 @@
 ---
-title: 'VueCSS Website'
-description: 'VueCSS Website.'
+title: 'Vue3 CSS3 Perspective Playground'
+description: 'Portfolio project of Vue being mounted in a html file using CSS properities to turn a square.'
 image:
   src: '/img/VueCSS.png'
   alt: 'An image showcasing My Page.'
@@ -9,24 +9,24 @@ image:
 head:
   meta:
     - name: 'keywords'
-      content: 'nuxt, vue, content'
+      content: 'html, vue, CSS3, mounted'
     - name: 'robots'
       content: 'index, follow'
     - name: 'author'
-      content: 'NuxtLabs'
+      content: 'JoshuaPaino'
     - name: 'copyright'
-      content: '© 2022 NuxtLabs'
+      content: '© 2023 Joshua Paino'
 ---
 
 ::ProjectPage
 ---
 GitLink: https://github.com/
-ViewLink: https://jostpaino.github.io/Gotham/
-FrameworkIcon:  logos:react
+ViewLink: https://joshuapaino.github.io/PerspectivePlayground/
 MdImage: '/img/VueCSS.png'
-MdImageName: VueImage
-ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
-ProjTitle: Nuxt Portfolio Website
+MdImageName: Vue CSS3 Project
+ProjDesc: Portfolio project of Vue being mounted in a html file using CSS properities to turn a square.
+ProjTitle: CSS3 Perspective Playground
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 ---
 
 ::
