--- a/content/work/6.react-bankapp.md
+++ b/content/work/6.react-bankapp.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://vercel.com/joshuapaino/rick-morty-nuxt
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/reactbankapp.png'
 MdImageName: reactbankapp
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
