--- a/content/work/8.Vue-Image.md
+++ b/content/work/8.Vue-Image.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://nuxt13-meta-p34u.vercel.app/
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/VueImage.png'
 MdImageName: VueImage
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
