--- a/content/work/9.html-exoticar.md
+++ b/content/work/9.html-exoticar.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://jostpaino.github.io/ExotiCar/
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/ExotiCar.png'
 MdImageName: VueImage
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
