--- a/content/work/10.html-Gotham.md
+++ b/content/work/10.html-Gotham.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://jostpaino.github.io/Gotham/
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/Gotham.png'
 MdImageName: VueImage
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
