--- a/content/work/3.Vue-Music.md
+++ b/content/work/3.Vue-Music.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://gpt-3-brown.vercel.app/
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/VueMusic.png'
 MdImageName: VueMusic Website
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
