--- a/content/work/4.nuxt-rickmorty.md
+++ b/content/work/4.nuxt-rickmorty.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://vercel.com/joshuapaino/rick-morty-nuxt
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/NuxtRickMorty.png'
 MdImageName: GPT3 Website
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
