--- a/content/work/5.react-gericht.md
+++ b/content/work/5.react-gericht.md
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://vercel.com/joshuapaino/rick-morty-nuxt
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/ReactGericht.png'
 MdImageName: ReactGericht
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
