--- a/content/work/7.Next-Metaverse.md
+++ b/content/work/7.Next-Metaverse.md
@@ -1,5 +1,5 @@
 ---
-title: 'Metaverse Website'
+title: 'Metaverse'
 description: 'Metaverse Website.'
 image:
   src: '/img/Metaverse.png'
@@ -22,7 +22,7 @@ head:
 ---
 GitLink: https://github.com/
 ViewLink: https://nuxt13-meta-p34u.vercel.app/
-FrameworkIcon:  logos:react
+ToolsUsed: HTML, CSS3, Vue, Lifecycle hooks
 MdImage: '/img/Metaverse.png'
 MdImageName: ReactGericht
 ProjDesc: AAAAAAAAAAAAAAAAAAAAAAAAA
